# thermalright_trcc_linux_320320

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LEXICON.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  trcc.desktop
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  device-request.md  security-report.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  stale.yml  tests.yml
doc/: 09_Handshake_Protocol_Timing.txt  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  DEVELOPMENT_STATUS.md  DEVICE_TESTING.md  HID_TESTING.md  INSTALL_GUIDE.md  README.md  SECURITY_CHECKLIST.md  SUPPORTED_DEVICES.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING.md  UI_RESOURCE_HIERARCHY.md  UI_RESOURCE_MAPPING.md  USBLCDNEW_PROTOCOL.md  USBLCD_PROTOCOL.md  USBLED_PROTOCOL.md  WINDOWS_UI_HIERARCHY.md
src/data/Web/zt240240/000a/: config1.dc
src/data/Web/zt240240/000b/: config1.dc
src/data/Web/zt240240/000c/: config1.dc
src/data/Web/zt240240/000d/: config1.dc
src/data/Web/zt240240/000e/: config1.dc
src/data/Web/zt240240/001a/: config1.dc
src/data/Web/zt240240/002e/: config1.dc
src/data/Web/zt240240/003a/: config1.dc
src/data/Web/zt240240/003b/: config1.dc
src/data/Web/zt240240/003c/: config1.dc
src/data/Web/zt240240/003d/: config1.dc
src/data/Web/zt240240/003e/: config1.dc
src/data/Web/zt240240/004c/: config1.dc
src/data/Web/zt240240/005b/: config1.dc
src/data/Web/zt240240/005d/: config1.dc
src/data/Web/zt240240/005e/: config1.dc
src/data/Web/zt240240/006a/: config1.dc
src/data/Web/zt240240/007b/: config1.dc
src/data/Web/zt240240/007c/: config1.dc
src/data/Web/zt240240/008a/: config1.dc
src/data/Web/zt240240/008e/: config1.dc
src/data/Web/zt240240/009b/: config1.dc
src/data/Web/zt240240/010b/: config1.dc
src/data/Web/zt240240/011a/: config1.dc
src/data/Web/zt240240/011e/: config1.dc
src/data/Web/zt240240/012c/: config1.dc
src/data/Web/zt240240/013a/: config1.dc
src/data/Web/zt240240/014b/: config1.dc
src/data/Web/zt240240/014e/: config1.dc
src/data/Web/zt240240/015b/: config1.dc
src/data/Web/zt240240/015d/: config1.dc
src/data/Web/zt240240/016b/: config1.dc
src/data/Web/zt240240/016d/: config1.dc
src/data/Web/zt240240/017c/: config1.dc
src/data/Web/zt240240/018c/: config1.dc
src/data/Web/zt240240/019a/: config1.dc
src/data/Web/zt240240/019e/: config1.dc
src/data/Web/zt240240/020b/: config1.dc
src/data/Web/zt240240/020d/: config1.dc
src/data/Web/zt240240/021e/: config1.dc
src/data/Web/zt240240/022c/: config1.dc
src/data/Web/zt240240/023a/: config1.dc
src/data/Web/zt320320/000a/: config1.dc
src/data/Web/zt320320/000b/: config1.dc
src/data/Web/zt320320/000c/: config1.dc
src/data/Web/zt320320/000d/: config1.dc
src/data/Web/zt320320/000e/: config1.dc
src/data/Web/zt320320/001b/: config1.dc
src/data/Web/zt320320/002a/: config1.dc
src/trcc/: __init__.py  __main__.py  __version__.py  api.py  cli.py  cloud_downloader.py  conf.py  constants.py  data_repository.py  dc_config.py  dc_parser.py  dc_writer.py  debug_report.py  device_bulk.py  device_detector.py  device_factory.py  device_hid.py  device_implementations.py  device_lcd.py  device_led.py  device_led_hr10.py  device_led_segment.py  device_scsi.py  doctor.py  gif_animator.py  hid_device.py  hr10_display.py  hr10_tempd.py  lcd_driver.py  led_device.py  overlay_renderer.py  paths.py  scsi_device.py  sensor_enumerator.py  sysinfo_config.py  system_config.py  system_info.py  system_sensors.py  theme_downloader.py
src/trcc/assets/fonts/: README.md
src/trcc/core/: __init__.py  controllers.py  models.py
src/trcc/data/: Theme1280480.7z  Theme1920462.7z  Theme240240.7z  Theme320240.7z  Theme320320.7z  Theme480480.7z  Theme480800.7z  Theme480854.7z  Theme640480.7z  Theme800480.7z  Theme854480.7z  Theme960540.7z  theme240320.7z  theme360360.7z  theme540960.7z
src/trcc/data/Web/: zt240320.7z
src/trcc/data/web/: zt480640.7z  zt7201600.7z
src/trcc/qt_components/: __init__.py  assets.py  base.py  constants.py  eyedropper.py  qt_app_mvc.py  screen_capture.py  uc_about.py  uc_activity_sidebar.py  uc_color_wheel.py  uc_device.py  uc_hr10_control.py  uc_image_cut.py  uc_info_module.py  uc_led_control.py  uc_preview.py  uc_screen_led.py  uc_sensor_picker.py  uc_seven_segment.py  uc_system_info.py  uc_theme_local.py  uc_theme_mask.py  uc_theme_setting.py  uc_theme_web.py  uc_video_cut.py
src/trcc/services/: __init__.py  device.py  display.py  image.py  led.py  media.py  overlay.py  system.py  theme.py
tests/: README.md  __init__.py  run_tests.py  test_api.py  test_architecture.py  test_ax120_display.py  test_background_images.py  test_bulk_device.py  test_cli.py  test_cloud_downloader.py  test_controllers.py  test_data_repository.py  test_dc_parser.py  test_dc_writer.py  test_debug_report.py  test_device_bulk.py  test_device_detector.py  test_device_implementations.py  test_device_lcd.py  test_device_led_kvm.py  test_device_scsi.py  test_display_modes.py  test_event_bus.py  test_gif_animator.py  test_gif_video.py  test_gui_components.py  test_hr10_display.py  test_integration.py  test_kvm_led_device.py  test_lcd_driver.py  test_media_player.py  test_models.py  test_overlay_renderer.py  test_paths.py  test_qt_base.py  test_qt_widgets.py  test_scsi_device.py  test_sensor_enumerator.py  test_services.py  test_system_config.py  (+6 more)
tests/hid_testing/: conftest.py  test_device_factory.py  test_device_hid.py  test_device_led.py  test_hid_device.py  test_led_controller.py  test_led_device.py
(+152 files in other folders)
