[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trcc-linux"
version = "1.1.0"
description = "Linux implementation of Thermalright LCD Control Center"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "TRCC Linux Contributors" }
]
keywords = ["thermalright", "lcd", "cooling", "hardware", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "py7zr>=0.20.0",
]

[project.optional-dependencies]
systray = [
    "pystray>=0.19.0",
]
# NOTE: For video playback, ffmpeg system package is RECOMMENDED (matches Windows TRCC)
# This opencv extra is an alternative if ffmpeg is not available on your system
video = [
    "opencv-python>=4.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "trcc-linux[systray,video,dev]",
]

[project.urls]
Homepage = "https://github.com/Lexonight1/thermalright-trcc-linux"
Documentation = "https://github.com/Lexonight1/thermalright-trcc-linux#readme"
Repository = "https://github.com/Lexonight1/thermalright-trcc-linux"
Issues = "https://github.com/Lexonight1/thermalright-trcc-linux/issues"

[project.scripts]
trcc = "trcc.cli:main"
trcc-gui = "trcc.cli:gui"
trcc-detect = "trcc.cli:detect"
trcc-test = "trcc.cli:test_display"

[project.gui-scripts]
trcc-lcd = "trcc.cli:gui"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/assets",
    "/data",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
