[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trcc-linux"
version = "1.1.3"
description = "Linux implementation of Thermalright LCD Control Center"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "TRCC Linux Contributors" }
]
keywords = ["thermalright", "lcd", "cooling", "hardware", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "py7zr>=0.20.0",
]

[project.optional-dependencies]
nvidia = [
    "nvidia-ml-py>=11.0.0",
]
wayland = [
    "dbus-python>=1.3.0",
    "PyGObject>=3.42.0",
]
hid = [
    "pyusb>=1.2.0",
    "hidapi>=0.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
all = [
    "trcc-linux[nvidia,wayland,hid,dev]",
]

[project.urls]
Homepage = "https://github.com/Lexonight1/thermalright-trcc-linux"
Documentation = "https://github.com/Lexonight1/thermalright-trcc-linux#readme"
Repository = "https://github.com/Lexonight1/thermalright-trcc-linux"
Issues = "https://github.com/Lexonight1/thermalright-trcc-linux/issues"

[project.scripts]
trcc = "trcc.cli:main"
trcc-gui = "trcc.cli:gui"
trcc-detect = "trcc.cli:detect"
trcc-test = "trcc.cli:test_display"

[project.gui-scripts]
trcc-lcd = "trcc.cli:gui"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/assets",
    "/data",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["trcc"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "Linux"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportOptionalOperand = "warning"
